# fastapi-snowflake

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  connectot.py  docker-compose.yml  dockerfile.www  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yaml
app/: config.py  main.py
app/api/: clients.py
app/crud/: client_crud.py
app/db/: database.py
app/models/: client.py
app/routes/: crud.py  routes.py
app/schemas/: client.py
app/tables/: client.py
db/: env.py
db/versions/: 394434ba987f_add_client_table.py
docs/dev/: README.md  api.md  database.md  docker.md  settings.md
fastapi_snowflake_challenge/: www.py
fastapi_snowflake_challenge/conf/: db.py  settings.py
fastapi_snowflake_challenge/models/: client.py
fastapi_snowflake_challenge/routes/: client.py
fastapi_snowflake_challenge/schemas/: client.py
fastapi_snowflake_challenge/services/: db.py
volume/cache/: license.json  machine.json  server.test.pem  server.test.pem.crt  server.test.pem.key
volume/cache/certs/ca/: LocalStack_LOCAL_Root_CA.crt  LocalStack_LOCAL_Root_CA.key.pem
